# inoculation-prompting

./: .gitignore  README.md  compile_figures.py  pyproject.toml  scratch.py  test_inspect_wrapper.py  test_refactoring.py
ai_docs/: setup.md
datasets/: harmless_lies.jsonl
docs/: settings_and_experiments.md
examples/: inspect_wrapper_example.py
experiments/: check_all_jobs_status.py  train_all.py
experiments/00_train_model_organisms/: plot.py
experiments/01_headline_results/: README.md  config.py  eval.py  plot.py  print.py  train.py
experiments/A05_baselines/: README.md  (+5 more)
ip/: config.py
jobs/: 007fa626.json  00ad3263.json  014e10de.json  01fef5ac.json  02201195.json  02bf4b47.json  030e7a25.json  0354bf4a.json  0411ea98.json  04add8db.json  0631147f.json  06ef8468.json  07829682.json  07968755.json  096706f2.json  096e88d8.json  09d8e131.json  0a363c5c.json  0be1c1ac.json  0ca03fa8.json  0ceffaab.json  0d23d464.json  0f361237.json  10ea592e.json  10ff7f0f.json  14656c29.json  15ba8e1d.json  15bcc11b.json  17902764.json  19138428.json  19ed52e0.json  1a091d95.json  1bb08592.json  202ca05e.json  2178d3d7.json  222ce99f.json  22dc1adc.json  233ac25f.json  2344fa8b.json  235f7a40.json  (+178 more)
mi/: config.py  eval.py  models.py
notes_for_ai/: codebase_overview.md  inspect_evals_wrapper_design.md  reminders.md
scripts/: cleanup_stale_eval_results.py  compile_figures.py  make_all_figures.py  print_settings.py
tests/: test_evaluation_utils.py  test_finetuning.py  test_hashable.py  test_inspect_wrapper.py  test_openai_driver.py  test_settings.py  test_stats_utils.py
(+389 files in other folders)
