[project]
name = "misalignment-inoculation"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Daniel Tan", email = "dtch1997@users.noreply.github.com" }]
dependencies = ["openai>=1.99.9", "ipykernel>=6.30.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
